# simd-test-rs

./: Cargo.toml  README.md
.cargo/: config.toml
src/: colatz.rs  lennard_jones.rs  lennard_jones_t.rs  main.rs  matrix.rs
src/linalg/: matrix.rs  mod.rs  primtrait.rs  vector.rs
src/transpose_u8/: interleave_u8.rs  mod.rs  naive.rs  transpose_64x16_u8.rs  transpose_64x8_u8.rs
