[package]
name = "simd-test-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
rand = "0.8"
rayon = "1.5"

[profile.release]
strip = "debuginfo"
overflow-checks = false
opt-level = 3
lto = true
